--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,3 +1,43 @@
-li a {
-    color: green;
+.list {
+    border: 2px solid #37392e;
+    border-radius: 5px;
+    scroll-snap-type: y mandatory;
+    overscroll-behavior-y: contain;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
+li a {
+    color: #37392e;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    background: #eee5e5;
+  }
+
+li {
+    padding: 20px;
+    border-top: 1px solid #ccc;
+    scroll-snap-align: start;
+}
+
+li:first-child {
+    border: 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    color: #37392e;
+    background: #ddcecd;
+    font-family: "Poppins", sans-serif;
+}
+  
