--- a/polls/templates/detail.html
+++ b/polls/templates/detail.html
@@ -1,14 +1,26 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/details.css' %}">
+
 <form action="{% url 'polls:vote' question.id %}" method="post">
     {% csrf_token %}
-    <fieldset>
-        <legend><h1>{{ question.question_text }}</h1></legend>
-        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-        {% for choice in question.choice_set.all %}
-            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-        {% endfor %}
-    </fieldset>
-    <input type="submit" value="Vote">
+    <section class="radio-section">
+        <div class="radio-list">
+            <h1>{{ question.question_text }}</h1>
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+            {% for choice in question.choice_set.all %}
+                <div class="radio-item">
+                    <input name="choice" id="choice{{ forloop.counter }}" type="radio" value="{{ choice.id }}">
+                    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
+                </div>
+            {% endfor %}
+            <div class="button">
+                <input type="submit" value="Vote" class="button__text submit">
+            </div>
+            <a href="{% url 'polls:index' %}" class="button">
+                <span class="button__text">BACK</span>
+            </a>
+        </div>
+    </section>
 </form>
 
-<a href="{% url 'polls:index' %}">Back</a>
