--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -3,6 +3,11 @@
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 <section>
+    {% if user.is_authenticated %}
+        <p>Welcome, {{ user.username }}.</p>
+    {% else %}
+        <p>Welcome, new user. <a href="{% url 'admin:index' %}">Please log in.</a></p>
+    {% endif %}
     <h1>Polls in progress</h1>
     <div class="list">
         {% if latest_question_list %}
